# lensmint-research-lab

./: README.md  SECURITY_RFC.md
.github/workflows/: cross-compile.yml
benchmarks/: run_benchmark.py
benchmarks/results/: benchmark_report.md
lensmint-daemon-poc/: Cargo.toml
lensmint-daemon-poc/src/: main.rs
rust-phash-validator/: Cargo.toml
rust-phash-validator/src/: main.rs
zk-prototypes/phash-zk-verifier/host/src/: main.rs
zk-prototypes/phash-zk-verifier/methods/guest/src/: main.rs
