[package]
name = "lensmint-daemon-poc"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
base64 = "0.22.1"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
getrandom = "0.4.2"
hex = "0.4.3"
image = "0.25.10"
image_hasher = "3.1.1"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["full"] }
